--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,15 +25,18 @@
 
     
   <% if user_signed_in? %>
-   <% if user_signed_in? && current_user.id == @item.user_id %>
+    <%# <% if user_signed_in? && current_user.id == @item.user_id %> 
+   <% if user_signed_in? && current_user.id == @item.user_id && !Order.exists?(item_id: @item.id) %> 
     <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
-   <% else %>
-   <% if Order.exists?(item_id: @item.id) %>
+    
     <% else %>
-     <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id) ,class:"item-red-btn"%>
-    <% end %>
+       <% if Order.exists?(item_id: @item.id) %> 
+            <%#  購入画面リンク非表示  %>
+       <% else %>
+      <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id) ,class:"item-red-btn"%>
+       <% end %>
    <% end %>
  <% end %>
     <div class="item-explain-box">
